# iPod-RedBook-Audio-Converter

./: .gitignore  LICENSE  ProductSpec.md  README.md  pyproject.toml
ipodrb/: __init__.py  __main__.py  cli.py
ipodrb/cache/: __init__.py  manager.py
ipodrb/converter/: __init__.py  ffmpeg.py  pipeline.py  tagger.py  transcoder.py  verifier.py
ipodrb/csv_io/: __init__.py  reader.py  writer.py
ipodrb/models/: __init__.py  album.py  config.py  plan.py  status.py
ipodrb/planner/: __init__.py  defaults.py  resolver.py  validator.py
ipodrb/scanner/: __init__.py  analyzer.py  detector.py
ipodrb/tui/: __init__.py  components.py  dashboard.py  events.py
ipodrb/utils/: __init__.py  conversion_log.py  errors.py  logging.py
ipodrb/xlsx/: __init__.py  reader.py  writer.py
screenshots/: .gitkeep
tests/: __init__.py  test_defaults.py  test_ffmpeg.py
yangon/: __main__.py  cli.py
yangon/cache/: __init__.py  manager.py
yangon/converter/: __init__.py  ffmpeg.py  pipeline.py  tagger.py  transcoder.py  verifier.py
yangon/csv_io/: __init__.py  writer.py
yangon/models/: __init__.py  album.py  config.py  plan.py
yangon/planner/: __init__.py  defaults.py  resolver.py  validator.py
yangon/scanner/: __init__.py  analyzer.py  detector.py  metadata.py  walker.py
yangon/tui/: __init__.py  dashboard.py
yangon/utils/: __init__.py  conversion_log.py  errors.py  logging.py
yangon/xlsx/: __init__.py  reader.py  schemas.py  writer.py
yangon/yaml_io/: __init__.py  reader.py  writer.py
